hetzner backend file naming aligned

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": "cd app && npm run build:prod",
+  "outputDirectory": "app/dist",
   "rewrites": [
     {
       "source": "/(.*)",
