--- a/hetzner.toml
+++ b/hetzner.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "railway.Dockerfile"
+dockerfilePath = "hetzner.Dockerfile"
 
 [deploy]
 numReplicas = 1
