--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "cd app && npm run build:prod",
+  "installCommand": "cd app && pnpm install",
+  "buildCommand": "cd app && pnpm run build:prod",
   "outputDirectory": "app/dist",
   "rewrites": [
     {
