--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -1,4 +1,4 @@
-# Backend API container with ffmpeg
+# Backend API container with ffmpeg and additional dependencies
 FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
@@ -7,6 +7,10 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 # Install runtime packages
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ffmpeg \
+    curl \
+    ca-certificates \
+    libpq5 \
+    nginx \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app/services
