--- a/app/package.json
+++ b/app/package.json
@@ -53,6 +53,7 @@
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "express": "5.1.0",
     "fabric": "^5.3.0",
     "framer-motion": "^11.0.3",
     "html2canvas": "^1.4.1",
@@ -75,6 +76,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.1",
+    "socket.io": "4.8.1",
     "sonner": "^1.7.2",
     "strip-ansi": "^7.1.0",
     "tailwind-merge": "^2.6.0",
