ai overlay empowered with tenor, giphy, pexels apis

--- a/services/.env.example
+++ b/services/.env.example
@@ -1,76 +1,15 @@
-# Database Configuration
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=magiclens
-DB_USER=magiclens_user
-DB_PASSWORD=magiclens_pass
-DATABASE_URL=postgresql://user:password@localhost:5432/magiclens
+# GIF API Keys for Overlay Search
+TENOR_API_KEY=your_tenor_api_key_here
+GIPHY_API_KEY=your_giphy_api_key_here
+TENOR_CLIENT_KEY=augmented_reality_app
+PEXELS_API_KEY=your_pexels_api_key_here
 
-# Media Storage Configuration (S3-compatible)
+# Get your keys from:
+# Tenor: https://developers.google.com/tenor/guides/quickstart
+# Giphy: https://developers.giphy.com/
+# Pexels: https://www.pexels.com/api/
+
+# Other existing environment variables...
 MEDIA_BUCKET=magiclens-media
 MEDIA_REGION=us-east-1
-MEDIA_ACCESS_KEY=your_access_key_here
-MEDIA_SECRET_KEY=your_secret_key_here
-# MEDIA_ENDPOINT_URL=https://s3.amazonaws.com  # Optional: for S3-compatible services like R2, MinIO
-
-# Local Development Fallback
 LOCAL_MEDIA_DIR=/tmp/magiclens-media
-
-# AI/LLM Configuration
-OPENROUTER_API_KEY=your_openrouter_api_key_here
-AI_MODEL=gpt-4o-mini
-AI_PROVIDER_URL=https://openrouter.ai/api/v1/chat/completions
-
-# Redis Configuration (for job queue)
-REDIS_URL=redis://localhost:6379/0
-
-# Render Worker
-ENABLE_RENDER_WORKER=true
-
-# JWT Configuration
-JWT_SECRET_KEY=your_jwt_secret_key_here
-JWT_ALGORITHM=HS256
-JWT_EXPIRATION_HOURS=24
-
-# Flow Blockchain Configuration
-FLOW_NETWORK=testnet
-FLOW_PRIVATE_KEY=your_flow_private_key_here
-
-# CORS Configuration
-ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
-ALLOWED_METHODS=GET,POST,OPTIONS
-ALLOWED_HEADERS=Authorization,Content-Type,X-Requested-With
-ALLOW_CREDENTIALS=false
-
-# Upload Validation
-MAX_UPLOAD_SIZE_MB=200
-ALLOWED_VIDEO_MIME_TYPES=video/mp4,video/quicktime,video/webm
-ALLOWED_ASSET_MIME_TYPES=image/png,image/jpeg,image/webp,video/mp4,application/octet-stream
-
-# Environment
-ENV=development  # Options: development, production
-
-# Server Configuration
-SERVER_HOST=0.0.0.0
-SERVER_PORT=8000
-SERVER_RELOAD=true  # Set to false in production
-SERVER_WORKERS=1    # Set to 4+ in production (CPU count recommended)
-LOG_LEVEL=info      # Options: debug, info, warning, error
-
-# Sentry Error Tracking (optional)
-SENTRY_DSN=
-SENTRY_ENVIRONMENT=development
-SENTRY_TRACES_SAMPLE_RATE=0.1
-
-# Flow Contract Addresses (set after deployment)
-FLOW_ACCESS_NODE=http://localhost:8888  # For emulator
-# FLOW_ACCESS_NODE=https://rest-testnet.onflow.org  # For testnet
-FLOW_ARASSETNFT_ADDRESS=
-FLOW_COLLABORATIONHUB_ADDRESS=
-FLOW_FORTEAUTOMATION_ADDRESS=
-
-# Security & Rate Limiting
-RATE_LIMIT_PER_MINUTE=60
-MAX_VIDEO_SIZE=524288000  # 500 MB in bytes
-MAX_ASSET_SIZE=52428800   # 50 MB in bytes
-MAX_IMAGE_SIZE=10485760   # 10 MB in bytes
