improved user flow, overlays being rendered, and editor controls

--- a/app/.env.example
+++ b/app/.env.example
@@ -10,3 +10,23 @@ VITE_API_BASE_URL=http://localhost:8000
 # VITE_ARASSETNFT_ADDRESS=
 # VITE_COLLABORATIONHUB_ADDRESS=
 # VITE_FORTEAUTOMATION_ADDRESS=
+
+# Optional API Keys for Enhanced Features
+# GIF API Keys for Overlay Search
+TENOR_API_KEY=your_tenor_api_key_here
+GIPHY_API_KEY=your_giphy_api_key_here
+TENOR_CLIENT_KEY=augmented_reality_app
+PEXELS_API_KEY=your_pexels_api_key_here
+
+# Get your keys from:
+# Tenor: https://developers.google.com/tenor/guides/quickstart
+# Giphy: https://developers.giphy.com/
+# Pexels: https://www.pexels.com/api/
+
+# Optional AI Analysis (costs inference - only enable if you want to charge users)
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+AI_API_KEY=your_ai_api_key_here
+AI_MODEL=gpt-4o-mini
+AI_PROVIDER_URL=https://openrouter.ai/api/v1/chat/completions
+
+# Get OpenRouter API key from: https://openrouter.ai/
